padding and spacing fixed in Moile  view of home page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,7 +56,7 @@ header .nav a {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.social  {
+.social {
   display: flex;
   align-items: center;
   gap: 2em;
@@ -800,7 +800,6 @@ header .nav a {
 
 /* Down Button  */
 
-
 .down {
   position: fixed;
   height: 40px;
@@ -986,7 +985,7 @@ header .nav a {
   #main-chef {
     padding: 35px 30px;
     display: grid;
-    place-items:  center;
+    place-items: center;
   }
 
   #main-chef .left {
@@ -1064,7 +1063,7 @@ header .nav a {
 
   /* inbox  */
   #inbox {
-    margin: 35px 30px;;
+    margin: 35px 30px;
   }
 
   #inbox .inbox-heading {
@@ -1108,8 +1107,14 @@ header .nav a {
 }
 
 @media screen and (max-width: 480px) {
+  /* header */
+  header {
+    padding: 1.5em 20px;
+  }
+
+  /* featured */
   #main-featured-recipe {
-    margin: 15px;
+    margin: 2em 20px;
     border-radius: 20px;
   }
 
@@ -1177,8 +1182,9 @@ header .nav a {
     height: 25px;
   }
 
+  /* Categories  */
   #main-categories {
-    padding: 3em 2em;
+    padding: 2em 20px;
   }
 
   #main-categories .cat-info h1 {
@@ -1193,11 +1199,11 @@ header .nav a {
   #main-categories .cat-container {
     grid-template-columns: repeat(2, 1fr);
     gap: 2em 1em;
+    margin-top: 30px;
   }
 
   #main-categories .cat-container .cat-card {
     height: 170px;
-    width: 155px;
   }
 
   #main-categories .cat-container .cat-card img {
@@ -1211,10 +1217,12 @@ header .nav a {
   #main-categories .cat-container .cat-card .cat-name p {
     font-size: 15px;
   }
+
+  /* Recipe  */
   #main-recipes {
-    padding: 2rem;
+    padding: 2em 20px;
   }
-  
+
   #main-recipes .heading-content .recipes-heading {
     font-size: 7vw;
   }
@@ -1226,6 +1234,7 @@ header .nav a {
 
   #main-recipes .recipe-container {
     grid-template-columns: repeat(1, 1fr);
+    padding-top: 30px;
   }
 
   #main-recipes .recipe-container .recipe-card {
@@ -1235,6 +1244,7 @@ header .nav a {
     font-size: 18px;
   }
 
+ /* chef  */
   #main-chef {
     padding: 20px 2em;
   }
@@ -1259,8 +1269,12 @@ header .nav a {
     padding: 16px 11px;
   }
 
+  /* Instagram  */
+  #main-instagram {
+    padding: 2em 20px;
+  }
   #main-instagram .insta-heading {
-    margin-bottom: 3rem;
+    margin-bottom: 30px;
   }
 
   #main-instagram .insta-heading h1 {
@@ -1276,8 +1290,9 @@ header .nav a {
     grid-template-columns: repeat(1, 1fr);
   }
 
+  /* Cooking  */
   #main-cooking {
-    padding: 3rem 2rem !important;
+    padding: 2em 20px !important;
   }
 
   #main-cooking .cooking-heading .cooking-title h1 {
@@ -1298,9 +1313,10 @@ header .nav a {
     width: 100%;
   }
 
+  /* Inox  */
   #inbox {
     border-radius: 20px;
-    margin: 2rem;
+    margin: 2em 20px;
   }
 
   #inbox .inbox-heading {
@@ -1342,8 +1358,9 @@ header .nav a {
     height: 7rem;
   }
 
+  /* Footer  */
   #footer {
-    padding: 1rem;
+    padding: 2em 20px;
   }
 
   .footer-logo {
@@ -1971,7 +1988,7 @@ header .nav a {
 #blog-heading {
   display: grid;
   place-items: center;
-  padding:3em 50px;
+  padding: 3em 50px;
   gap: 2em;
 }
 
@@ -2297,4 +2314,3 @@ header .nav a {
 /*                */
 /*  Contact Page */
 /*              */
-
